--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.29.4",
     "sass": "^1.32.11",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
